add JavaDocs and build scripts